--- a/.env-example
+++ b/.env-example
@@ -6,3 +6,9 @@ SECRET_KEY = 'CHANGE-ME'
 
 # 0 = False; 1 = True
 DEBUG = 0
+
+# ex.: windows => chromedriver.exe; mac => chromedriver
+CHROMEDRIVER_NAME = 'your-chrome-driver-name-here'
+
+# 0 = False; 1 = True - if true, selenium doesn't open the browser
+SELENIUM_HEADLESS=1
