--- a/.env-example
+++ b/.env-example
@@ -2,13 +2,26 @@
 PER_PAGE = 9
 
 # Django security key
-SECRET_KEY = 'CHANGE-ME'
+SECRET_KEY = '_L,;[R][:V{).ywFM[aVqw,ChypW"q:OU(`*Pbzszin"$[/;bYi%B:iywGXzUw%n'
 
 # 0 = False; 1 = True
 DEBUG = 0
 
-# ex.: windows => chromedriver.exe; mac => chromedriver
-CHROMEDRIVER_NAME = 'your-chrome-driver-name-here'
+CHROMEDRIVER_NAME = 'chromedriver.exe'
 
-# 0 = False; 1 = True - if true, selenium doesn't open the browser
-SELENIUM_HEADLESS=1
+# 0 = False; 1 = True => if headless is false, open the browser; if it is true, the browser is not shown
+SELENIUM_HEADLESS = 1
+
+# Database settings
+# Sqlite
+DATABASE_ENGINE = 'django.db.backends.sqlite3'
+DATABASE_NAME = "./db.sqlite3"
+
+# Postgres
+# DATABASE_ENGINE='django.db.backends.postgresql'
+# DATABASE_NAME="basededados"
+
+DATABASE_USER = "user"
+DATABASE_PASSWORD = "password"
+DATABASE_HOST = "127.0.0.1"
+DATABASE_PORT = "5432"
