JWT login for Rest Framework

--- a/.env-example
+++ b/.env-example
@@ -2,7 +2,10 @@
 PER_PAGE = 9
 
 # Django security key
-SECRET_KEY = '_L,;[R][:V{).ywFM[aVqw,ChypW"q:OU(`*Pbzszin"$[/;bYi%B:iywGXzUw%n'
+SECRET_KEY = 'CHANGE-ME'
+
+# Simple JWT SECRET_KEY
+JWT_SECRET_KEY = 'CHANGE-ME'
 
 # 0 = False; 1 = True
 DEBUG = 0
